fix(slider): overflow hidden for circle text

--- a/styles/includes/_slider.scss
+++ b/styles/includes/_slider.scss
@@ -1,5 +1,6 @@
 .slider {
 	position: relative;
+	overflow-x: hidden;
 
 	&__heading {
 		max-width: 250px;
